--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@polkadot/api": "^9.4.2",
+    "@polkadot/extension-dapp": "^0.44.6",
+    "@polkadot/keyring": "^10.1.9",
+    "@polkadot/react-identicon": "^2.9.10",
+    "@polkadot/types": "^9.4.2",
+    "@polkadot/ui-keyring": "^2.9.10",
+    "@substrate/connect": "^0.7.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,10 +17,15 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-transition-group": "^4.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.8.3",
+    "use-async-effect": "^2.2.7",
+    "use-async-memo": "^1.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
