--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-transition-group": "^4.4.5",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
+    "styled-components": "^5.3.5",
     "typescript": "^4.8.3",
     "use-async-effect": "^2.2.7",
     "use-async-memo": "^1.2.4",
