add eslint & fix the linting issues

--- a/package.json
+++ b/package.json
@@ -9,26 +9,32 @@
     "@polkadot/react-identicon": "^2.9.10",
     "@polkadot/types": "^9.4.2",
     "@polkadot/ui-keyring": "^2.9.10",
-    "@substrate/connect": "^0.7.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.59",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-transition-group": "^4.4.5",
-    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.5",
-    "typescript": "^4.8.3",
     "use-async-effect": "^2.2.7",
-    "use-async-memo": "^1.2.4",
-    "web-vitals": "^2.1.4"
+    "use-async-memo": "^1.2.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^7.11.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react": "^7.28.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.59",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/styled-components": "^5.1.26",
+    "babel-eslint": "^10.1.0",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
